--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@ body.dark-mode .product h2 {
         <button id="theme-toggle" class="theme-toggle">🌙</button>
         <div class="container">
             <h2>Introducing the Abode of Precision</h2>
-            <h1>GODSPEED_</h1>
+            <h1>GODSPEED</h1>
             <p><i>"Where innovation meets immediacy"</i></p>
             <button class="cta-button" onclick="window.location.href='#pricing'">Get Started</button>
         </div>
